[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timepiece-mcp"
version = "0.1.0"
description = "MCP server for OBSS Timepiece Time in Status for Jira"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "jira", "timepiece", "time-in-status", "obss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
timepiece-mcp = "timepiece_mcp.server:main"

[project.urls]
Homepage = "https://github.com/gianni1989/timepiece-mcp"
Issues = "https://github.com/gianni1989/timepiece-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["timepiece_mcp"]

[tool.hatch.build.targets.sdist]
include = ["/timepiece_mcp", "/README.md", "/pyproject.toml"]
